# jq-optics

./: LICENSE  README.md  default.nix  jq-optics.cabal
src/: JQ.hs  Main.hs
